fix start alternatives for JOSM